fix: button style on mobile web (attempt #2)

--- a/src/App.css
+++ b/src/App.css
@@ -58,6 +58,8 @@ button {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
+  margin: 0;
+  text-align: center;
   text-decoration: none;
   border: 1px solid black;
   cursor: grab;
